--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <span>ajinkyashivpure@example.com</span>
+                    <span>ajinkyashivpure@gmail.com</span>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-map-marker-alt"></i>
